--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -4,7 +4,7 @@ name: client
 on:
   push:
     branches:
-      - reference # 브랜치 명
+      - reference # 내가 사용할 브랜치명
 jobs:
   build:
     runs-on: ubuntu-20.04
